--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Chat application using sockets.",
     "dependencies": {
         "express": "^4.17.1",
+        "package.json": "^2.0.1",
         "socket.io": "^2.3.0"
     }
 }
