Started on cookies. Not quite there.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "description": "Chat application using sockets.",
     "dependencies": {
+        "cookie-parser": "^1.4.4",
         "express": "^4.17.1",
         "package.json": "^2.0.1",
         "socket.io": "^2.3.0"
